# llm_eval_tutorial

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
pydantic_ai_duckdb_chat/: chat_demo.ipynb  mlflow_notebook_viewer.py
