[project]
name = "llm-eval"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "duckdb>=1.3.2",
    "jupyter>=1.1.1",
    "markdownify>=1.2.0",
    "mlflow>=3.3.2",
    "pandas>=2.3.2",
    "pre-commit>=4.3.0",
    "pydantic-ai>=1.0.2",
    "pylance>=0.35.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "scikit-learn>=1.7.1",
]
